<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="130dp"
            android:layout_height="113dp" android:id="@+id/primeNumberResultDescription"
            android:visibility="invisible" android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/resultDescription" android:layout_marginStart="44dp"
            app:layout_constraintEnd_toStartOf="@+id/primeNumberResult"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintBottom_toTopOf="@+id/primeNumberPositionTextField" android:layout_marginBottom="64dp"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/description"
            android:layout_width="374dp"
            android:layout_height="57dp" android:id="@+id/description"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.486"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="241dp"
            android:layout_height="50dp"
            android:hint="@string/primeNumberPositionTextField"
            app:layout_constraintTop_toBottomOf="@+id/description" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/primeNumberPositionTextField"
            android:layout_marginTop="240dp"
    />
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/calculateButton"
            android:onClick="onCalculateButton"
            app:layout_constraintTop_toBottomOf="@+id/primeNumberPositionTextField" android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="145dp"
            android:layout_marginEnd="145dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="240dp"/>
    <TextView
            android:layout_width="130dp"
            android:layout_height="113dp" android:id="@+id/primeNumberResult"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/primeNumberPositionTextField" android:layout_marginBottom="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp" android:textAlignment="center"
            android:text="@string/primeNumberResult" android:visibility="invisible"/>
    <ImageView
            android:layout_width="130dp"
            android:layout_height="113dp" app:srcCompat="?android:attr/fastScrollTrackDrawable"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/primeNumberResultDescription"
            app:layout_constraintStart_toStartOf="@+id/primeNumberResultDescription"
            app:layout_constraintTop_toTopOf="@+id/primeNumberResultDescription"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="@+id/primeNumberResultDescription"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="130dp"
            android:layout_height="113dp" app:srcCompat="?android:attr/fastScrollTrackDrawable"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/primeNumberResult"
            app:layout_constraintStart_toStartOf="@+id/primeNumberResult"
            app:layout_constraintEnd_toEndOf="@+id/primeNumberResult"
            app:layout_constraintBottom_toBottomOf="@+id/primeNumberResult"/>
</androidx.constraintlayout.widget.ConstraintLayout>